# codeql

./: .bazelrc  .bazelrc.internal  .bazelversion  .codeqlmanifest.json  .editorconfig  .favorites.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .lgtm.yml  .pre-commit-config.yaml  2024-11-25-ts57.md  AI-Framwork  Adding change notes.md  BUILD.bazel  Binary--search  CHANGE_NOTE_VALIDATION_RESULTS.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  MODULE.bazel  Makefile  NewTxtFile.txt  NuGet.Config  README-CHANGE-NOTE-VALIDATION.md  README.md  README.md n  SECURITY.md  WORKSPACE.bazel  action.yml  annotateOverlayLocal.py  benjamin-button.md  build-dbs.sh  build-test-dbs.sh  (+43 more)
actions/: BUILD.bazel  justfile
actions/extractor/: BUILD.bazel  codeql-extractor.yml
cpp/: BUILD.bazel  LeaveMeHere.txt  bulk_generation_targets.yml  justfile
cpp/autobuilder/: README.md
cpp/change-notes/: 2020-02-04-unsigned-difference-expression-compared-zero.md  2020-09-29-range-analysis-rollup.md  2020-10-21-size-check-queries.md  2020-11-02-unused-local-variable.md  2020-11-05-formatting-function.md  2020-11-12-unsafe-use-of-this.md  2021-02-04-unsigned-difference-expression-compared-zero.md  2021-02-24-memset-may-be-deleted.md  2021-04-26-more-sound-expr-might-overflow.md  2021-05-10-comparison-with-wider-type.md  2021-05-14-uncontrolled-allocation-size.md  2021-05-18-static-buffer-overflow.md  2021-05-19-weak-cryptographic-algorithm.md  2021-05-20-incorrect-allocation-error-handling.md  2021-06-10-std-types.md  2021-06-15-path-sensitive-stack-reachability.md  2021-06-21-weak-cryptographic-algorithm.md  2021-06-22-sql-tainted.md  2021-06-24-uncontrolled-arithmetic.md  2021-07-13-cleartext-storage-file.md  2021-07-20-toctou-race-condition.md  2021-08-23-getPrimaryQlClasses.md  2021-08-24-implicit-downcast-from-bitfield.md  2021-09-13-overflow-static.md  2021-09-21-jpl24.md  2021-09-27-overflow-static.md  2021-10-07-extraction-errors.md  2021-11-01-isFromSystemMacroDefinition.md  2021-11-09-use-of-http.md  2021-11-25-certificate-not-checked.md  2021-11-25-certificate-result-conflation.md  2021-12-09-buffer-write-estimation-reasons.md
cpp/codeql-dataflow-sql-injection/: Makefile  README.org  add-user.c  build.sh  codeql-dataflow-sql-injection.code-workspace  cpp-sqli.code-workspace  qlpack.yml
cpp/downgrades/: BUILD.bazel  qlpack.yml
cpp/misc/: bulk_generation_targets.json  bulk_generation_targets.yml
cpp/old-change-notes/: 2020-10-21-erroneous-types.md  2020-11-02-unused-local-variable.md  2020-11-05-private-models.md  2020-11-27-downgrade-to-recommendation.md  2021-02-24-memset-may-be-deleted.md  2021-03-11-failed-extractions.md  2021-03-11-overflow-abs.md  2021-03-17-av-rule-79.md  2021-04-06-assign-where-compare-meant.md  2021-04-09-unsigned-difference-expression-compared-zero.md  2021-04-13-arithmetic-queries.md  2021-04-21-return-stack-allocated-object.md  2021-05-12-uncontrolled-arithmetic.md  2021-05-20-incorrect-allocation-error-handling.md  2021-05-20-ref-qualifiers.md  2021-05-21-unsafe-strncat.md  2021-06-10-cleartext-transmission.md  2021-06-21-weak-cryptographic-algorithm.md  2021-06-30-wrong-type-format-argument.md  2021-07-27-uncontrolled-arithmetic.md  2021-07-29-virtual-function-declaration-specifiers.md  2021-08-10-has-trailing-return-type.md  2021-08-17-has-c-linkage.md  2021-08-23-ctime-weaken-claims.md  2021-08-23-getPrimaryQlClasses.md  2021-08-31-range-analysis-upper-bound.md  2021-09-13-overflow-static.md  2021-09-27-command-line-injection.md  2021-09-27-overflow-static.md  2021-10-01-improper-null-termination.md  2021-10-07-cleartext-transmission.md
cpp/upgrades/: CHANGELOG.md  qlpack.yml
csharp/: .editorconfig  .gitignore  BUILD.bazel  CSharp.sln  CSharp.slnx  Directory.Build.props  Directory.Build.targets  before.CSharp.sln.targets  codeql-extractor.yml  fix-whitespaces.sh  justfile  paket.dependencies  paket.main.bzl  paket.main_extension.bzl  update-deps.sh
csharp/.config/: dotnet-tools.json
csharp/.paket/: Paket.Restore.targets
csharp/change-notes/: 2020-08-18-ast-viewer.md  2020-08-18-partial-method-bodies.md  2020-09-02-assembly-insensitive-trap.md  2020-10-21-AST-printing-improvements.md  2020-10-28-cil-to-string.md  2020-11-18-local-function-attributable.md  2020-11-19-Relational-pattern.md  2020-12-08-cil-enum-underlying-type.md  2020-12-18-extract-custom-modifiers.md  2021-01-15-Relational-pattern.md  2021-01-19-Function-pointer.md  2021-01-25-Function-pointer-cil.md  2021-01-27-Add-binary-pattern.md  2021-02-02-foreach-underlying-methods.md  2021-02-12-with-expression.md  2021-04-14-customizations.md  2021-04-23-model-error-extraction.md  2021-06-16-qualified-names.md  (+5 more)
extractor/: Cargo.toml  build.rs  extractor.go  gomodextractor.go
generator/: Cargo.toml
go/: .gitattributes  .gitignore  .lgtm.yml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alert_weighting.properties  codeql-extractor.yml  codeql-workshop-go-bad-redirect-check.md  create_extractor_pack.py  gen.py  go.mod  go.sum  justfile  oauth2-notes.org  rules.bzl  size  tmp-session-oauth2_sink-1.ql
python/: BUILD.bazel  codeql-extractor.yml  justfile
ruby/: .codeqlmanifest.json  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  cargo-bazel-lock.json  codeql-extractor.yml  codeql-ruby.code-workspace  codeql-workspace.yml  justfile  rust-toolchain.toml
rust/: .generated.list  .gitattributes  BUILD.bazel  Cargo.toml  README.md  bulk_generation_targets.yml  codegen.conf  codeql-extractor.yml  justfile  lint.py  prefix.dbscheme  rust-toolchain.toml  schema.py  update_cargo_deps.sh
swift/: .clang-format  .codeqlmanifest.json  .gitignore  .pep8  .python-version  BUILD.bazel  CMakeLists.txt  README.md  codegen.conf  codeql-extractor.yml  create_extractor_pack.py  justfile  prefix.dbscheme  rules.bzl  schema.py  schema_documentation.md
unified/: .gitignore  AGENTS.md  BUILD.bazel  codeql-extractor.yml
(+80440 files in other folders)
