# This is the shared workspace file for extractor using shared/tree-sitter/extractor
[workspace]

resolver = "2"
members = [
    "shared/tree-sitter-extractor",
    "ruby/extractor",
    "rust/extractor",
    "rust/extractor/macros",
    "rust/ast-generator",
    "rust/autobuild",
]
exclude = ["mad-generation-build"]
