# This is the shared workspace file for extractor using shared/tree-sitter/extractor
[workspace]

resolver = "2"
members = [
    "shared/tree-sitter-extractor",
    "shared/yeast",
    "shared/yeast-macros",
    "ruby/extractor",
    "unified/extractor",
    "rust/extractor",
    "rust/extractor/macros",
    "rust/ast-generator",
    "rust/autobuild",
]
