# Please notice that any bazel targets and definitions in this repository are currently experimental
# and for internal use only.

workspace(name = "codeql")

load("//misc/bazel:workspace.bzl", "codeql_workspace")

codeql_workspace()

load("//misc/bazel:workspace_deps.bzl", "codeql_workspace_deps")

codeql_workspace_deps()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# To find additional information on this release or newer ones visit:
# https://github.com/bazelbuild/rules_rust/releases
http_archive(
    name = "rules_rust",
    sha256 = "6bfe75125e74155955d8a9854a8811365e6c0f3d33ed700bc17f39e32522c822",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_rust/releases/download/0.9.0/rules_rust-v0.9.0.tar.gz",
        "https://github.com/bazelbuild/rules_rust/releases/download/0.9.0/rules_rust-v0.9.0.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    version = "1.54.0",
    edition = "2018",
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies(bootstrap = True)

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository", "splicing_config")

crates_repository(
    name = "crate_index_cargo_local",
    lockfile = "//ruby:cargo-bazel-lock.json",
    cargo_lockfile = "//ruby:Cargo.lock",
    manifests = [
    "//ruby:Cargo.toml",
    "//ruby:autobuilder/Cargo.toml",
    "//ruby:extractor/Cargo.toml",
    "//ruby:generator/Cargo.toml",
    "//ruby:node-types/Cargo.toml",
    ],
)

load(
    "@crate_index_cargo_local//:defs.bzl",
    cargo_local_crate_repositories = "crate_repositories",
)

cargo_local_crate_repositories()
