load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")
load("//misc/bazel:pkg.bzl", "codeql_pack", "codeql_pkg_files")

package(default_visibility = ["//visibility:public"])

[
    codeql_pack(
        name = "-".join(parts),
        srcs = [
            "//actions/extractor",
        ],
        pack_prefix = "/".join(parts),
    )
    for parts in (
        [
            "experimental",
            "actions",
        ],
        ["actions"],
    )
]
